--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,10 +128,10 @@ header {
 /* --============================ gallery section start  ===========================-- */
 .top_heading h2 {
     font-style: normal;
-font-weight: 450;
-font-size: 50px;
-text-align: center;
-letter-spacing: -0.06em;
+    font-weight: 450;
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: -0.06em;
 }
 .blkColor {
     color: #313131;
@@ -146,6 +146,34 @@ letter-spacing: -0.06em;
     top: 65px;
     left: 0;
     bottom: 0;
+}
+
+.gallery {
+    position: relative;
+    padding: 20px;
+}
+.gallery::before {
+    content: "";
+    width: 10%;
+    height: 10%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-left: 1px solid #313131;
+    border-bottom: 1px solid #313131;
+    /* box-sizing: border-box; */
+}
+
+.gallery::after {
+    content: "";
+    width: 10%;
+    height: 10%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-top: 1px solid #313131;
+    border-right: 1px solid #313131;
+    /* box-sizing: border-box; */
 }
 /* --============================ gallery section end  ===========================-- */
 
